Add Find-the-Picture game for kids

--- a/src/locales/ar/instructions.json
+++ b/src/locales/ar/instructions.json
@@ -72,5 +72,15 @@
       "استخدم 'تلميح' ليكشف مسار صالح (محدود في الوضع التنافسي)",
       "أكمل جميع الاتصالات للفوز بالمرحلة!"
     ]
+  },
+  "pictureChoice": {
+    "title": "كيف تلعب: ابحث عن الصورة",
+    "description": "تختبر هذه اللعبة مهاراتك في فهم القراءة والتعرف البصري.",
+    "steps": [
+      "اقرأ الكلمة المعروضة في أعلى الشاشة.",
+      "انظر إلى الصور الأربع أدناه.",
+      "اضغط على الصورة التي تطابق الكلمة.",
+      "إذا كانت إجابتك صحيحة، ستنتقل تلقائيًا إلى المستوى التالي. إذا كانت خاطئة، حاول مرة أخرى!"
+    ]
   }
 }
