Add "Outside the Story" game

--- a/src/locales/ar/instructions.json
+++ b/src/locales/ar/instructions.json
@@ -1,4 +1,17 @@
 {
+  "clue": {
+    "title": "البحث عن الكلمات بالأدلة",
+    "description": "ابحث عن الكلمة المخفية عن طريق اختيار الحروف التي تتطابق مع القرينة. استخدم مفرداتك لحل اللغز!",
+    "steps": [
+      "اقرأ القرينة في أعلى الشاشة لتعرف الكلمة المطلوبة.",
+      "انقر على الحروف من الشبكة لتكوين إجابتك.",
+      "استخدم زر 'إزالة' للتراجع عن آخر حرف وضعته.",
+      "استخدم زر 'مسح' لحذف كل الحروف والبدء من جديد.",
+      "اضغط زر 'تحقق' لإرسال إجابتك ومعرفة ما إذا كانت صحيحة.",
+      "استخدم زر 'تلميح' إذا احتجت مساعدة (محدود في الوضع التنافسي).",
+      "حاول إيجاد الكلمة الصحيحة قبل نفاد المحاولات!"
+    ]
+  },
   "formation": {
     "title": "لعبة التشكيل",
     "description": "شكّل الكلمات عن طريق ربط الحروف على الشبكة. أنشئ أكبر عدد ممكن من الكلمات باستخدام الحروف المعطاة!",
@@ -14,19 +27,6 @@
       "حاول إيجاد جميع الكلمات في الشبكة!"
     ]
   },
-  "clue": {
-    "title": "البحث عن الكلمات بالأدلة",
-    "description": "ابحث عن الكلمة المخفية عن طريق اختيار الحروف التي تتطابق مع القرينة. استخدم مفرداتك لحل اللغز!",
-    "steps": [
-      "اقرأ القرينة في أعلى الشاشة لتعرف الكلمة المطلوبة.",
-      "انقر على الحروف من الشبكة لتكوين إجابتك.",
-      "استخدم زر 'إزالة' للتراجع عن آخر حرف وضعته.",
-      "استخدم زر 'مسح' لحذف كل الحروف والبدء من جديد.",
-      "اضغط زر 'تحقق' لإرسال إجابتك ومعرفة ما إذا كانت صحيحة.",
-      "استخدم زر 'تلميح' إذا احتجت مساعدة (محدود في الوضع التنافسي).",
-      "حاول إيجاد الكلمة الصحيحة قبل نفاد المحاولات!"
-    ]
-  },
   "imageClue": {
     "title": "لعبة الدليل الصوري",
     "description": "خمن الكلمة بناءً على الدليل البصري. اكتب إجابتك باستخدام لوحة المفاتيح وأرسلها للتحقق من صحتها!",
@@ -40,19 +40,6 @@
       "استخدم 'تلميح' لكشف حرف (محدود في الوضع التنافسي)",
       "إذا كانت إجابتك صحيحة، سترى رسالة نجاح",
       "إذا كانت إجابتك خاطئة، حاول مرة أخرى بإجابة مختلفة",
-      "أكمل أكبر عدد ممكن من المراحل!"
-    ]
-  },
-  "wordChoice": {
-    "title": "لعبة اختيار الكلمة",
-    "description": "اختر الكلمة الصحيحة التي تتطابق مع الصورة والصوت. اختبر مفرداتك ومهاراتك الملاحظة!",
-    "steps": [
-      "انظر إلى الصورة المعروضة على الشاشة",
-      "اضغط على زر الصوت لسماع نطق الكلمة",
-      "اقرأ خيارات الكلمات المعروضة",
-      "انقر على الكلمة التي تتطابق مع الصورة والصوت معًا",
-      "إذا اخترت بشكل صحيح، سترى رسالة نجاح وتنتقل إلى المرحلة التالية",
-      "إذا اخترت بشكل غير صحيح، ستحصل على ملاحظات ويمكنك المحاولة مرة أخرى",
       "أكمل أكبر عدد ممكن من المراحل!"
     ]
   },
@@ -81,6 +68,31 @@
       "انظر إلى الصور الأربع أدناه.",
       "اضغط على الصورة التي تطابق الكلمة.",
       "إذا كانت إجابتك صحيحة، ستنتقل تلقائيًا إلى المستوى التالي. إذا كانت خاطئة، حاول مرة أخرى!"
+    ]
+  },
+  "outsideStory": {
+    "title": "كيفية لعب برا السالفة",
+    "description": "لا يعرف أحد اللاعبين الكلمة السرية. باقي اللاعبين يسألون أسئلة ذكية للكشف عن من هو برا السالفة دون قول الكلمة مباشرة.",
+    "steps": [
+      "في بداية الجولة يتم اختيار كلمة سر من فئة معينة (مثلاً: حيوانات).",
+      "كل اللاعبين باستثناء لاعب واحد يعرفون الكلمة. اللاعب الذي لا يعرفها هو 'برا السالفة'.",
+      "يقوم اللاعبون الداخليون بطرح أسئلة ذكية ومضللة قليلًا للكشف عن الخارج دون أن يكشفوا الكلمة.",
+      "يحاول 'الخارج' خداع الآخرين لإيهامهم بأنه يعرف الكلمة.",
+      "بعد جولة من الأسئلة يتم التصويت لمن يعتقدون أنه 'برا السالفة'.",
+      "إذا تم كشف 'الخارج' يحصل اللاعبون الداخليون على نقاط، وإلا يحصل 'الخارج' على نقاط."
+    ]
+  },
+  "wordChoice": {
+    "title": "لعبة اختيار الكلمة",
+    "description": "اختر الكلمة الصحيحة التي تتطابق مع الصورة والصوت. اختبر مفرداتك ومهاراتك الملاحظة!",
+    "steps": [
+      "انظر إلى الصورة المعروضة على الشاشة",
+      "اضغط على زر الصوت لسماع نطق الكلمة",
+      "اقرأ خيارات الكلمات المعروضة",
+      "انقر على الكلمة التي تتطابق مع الصورة والصوت معًا",
+      "إذا اخترت بشكل صحيح، سترى رسالة نجاح وتنتقل إلى المرحلة التالية",
+      "إذا اخترت بشكل غير صحيح، ستحصل على ملاحظات ويمكنك المحاولة مرة أخرى",
+      "أكمل أكبر عدد ممكن من المراحل!"
     ]
   }
 }
