--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -96,6 +96,39 @@
   "findThePictureDesc": "اقرأ الكلمة واختر الصورة التي تطابقها.",
   "findThePictureFeatures": ["اختبار الفهم", "تمييز بصري", "ممتعة وتفاعلية"],
 
+  "outsideTheStoryTitle": "برا السالفة",
+  "outsideTheStoryDesc": "لا يعرف أحد اللاعبين الكلمة السرية بينما يعرفها الآخرون. حاولوا اكتشاف من هو 'برا السالفة' بالأسئلة الذكية.",
+  "outsideTheStoryFeatures": [
+    "استنتاج جماعي",
+    "خداع اجتماعي",
+    "مناسب للعائلة"
+  ],
+  "outsideStoryInstructionsTitle": "كيفية لعب 'برا السالفة'",
+  "outsideStoryInstructionsDesc": "لا يعرف أحد اللاعبين الكلمة السرية. باقي اللاعبين يسألون أسئلة ذكية للكشف عن من هو برا السالفة دون قول الكلمة مباشرة.",
+  "outsideStoryInstructionsSteps": [
+    "في بداية الجولة يتم اختيار كلمة سر من فئة معينة (مثلاً: حيوانات).",
+    "كل اللاعبين باستثناء لاعب واحد يعرفون الكلمة. اللاعب الذي لا يعرفها هو 'برا السالفة'.",
+    "يقوم اللاعبون الداخليون بطرح أسئلة ذكية ومضللة قليلًا للكشف عن الخارج دون أن يكشفوا الكلمة.",
+    "يحاول 'الخارج' خداع الآخرين لإيهامهم بأنه يعرف الكلمة.",
+    "بعد جولة من الأسئلة يتم التصويت لمن يعتقدون أنه 'برا السالفة'.",
+    "إذا تم كشف 'الخارج' يحصل اللاعبون الداخليون على نقاط، وإلا يحصل 'الخارج' على نقاط."
+  ],
+  "secretIs": "الكلمة السرية:",
+  "youAreOutside": "أنت برا السالفة (لا تعرف الكلمة السرية).",
+  "startRound": "بدء الجولة",
+  "revealToPlayer": "عرض للاعب",
+  "voting": "التصويت",
+  "votingInstruction": "يصوت كل لاعب لمن يعتقد أنه 'برا السالفة'.",
+  "voteFor": "اصوت لـ",
+  "revealResults": "اعرض النتائج",
+  "outsiderIdentified": "تم التعرف على الخارج!",
+  "outsiderNotIdentified": "لم يتم التعرف على الخارج",
+  "history": "سجل الجولات",
+  "noRounds": "لا يوجد جولات حتى الآن",
+  "players": "اللاعبون",
+  "category": "الفئة",
+  "lastRevealed": "آخر عرض",
+
   "selectMode": "اختر نمط اللعب",
   "selectModeDesc": "كيف تريد أن تلعب اليوم؟",
   "singlePlayer": "لاعب واحد",
@@ -115,7 +148,8 @@
 
   "selectCategory": "اختر فئة",
   "selectDifficulty": "اختر الصعوبة",
-  "selectCategoryDesc": "يمكنك اختيار فئة أو أكثر، أو اختيار \"منوع\" لتشمل الكل.",
+  "selectCategoryHint": "يمكنك اختيار فئة أو أكثر، أو اختيار \"منوع\" لتشمل الكل.",
+  "selectSingleCategoryHint": "اختر فئة واحدة للبدء في جولتك.",
   "animals": "حيوانات",
   "science": "علوم",
   "geography": "جغرافيا",
