--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -96,6 +96,29 @@
   "findThePictureDesc": "Read the word and choose the picture that matches it.",
   "findThePictureFeatures": ["Tests comprehension", "Visual recognition", "Fun and interactive"],
 
+  "outsideTheStoryTitle": "Outside the Story",
+  "outsideTheStoryDesc": "One player is outside the story (does not know the secret). The others try to find them by asking clever questions.",
+  "outsideTheStoryFeatures": [
+    "Group deduction",
+    "Social bluffing",
+    "Family friendly"
+  ],
+  "secretIs": "Secret is:",
+  "youAreOutside": "You are Outside the Story (you do NOT know the secret).",
+  "startRound": "Start Round",
+  "revealToPlayer": "Reveal to player",
+  "voting": "Voting",
+  "votingInstruction": "Each player votes who they think is the Outsider.",
+  "voteFor": "Vote for",
+  "revealResults": "Reveal Results",
+  "outsiderIdentified": "Outsider identified!",
+  "outsiderNotIdentified": "Outsider was NOT identified",
+  "history": "Rounds History",
+  "noRounds": "No rounds yet",
+  "players": "Players",
+  "category": "Category",
+  "lastRevealed": "Last revealed",
+
   "selectMode": "Choose Game Mode",
   "selectModeDesc": "How would you like to play today?",
   "singlePlayer": "Single Player",
@@ -115,7 +138,8 @@
 
   "selectCategory": "Select a Category",
   "selectDifficulty": "Select Difficulty",
-  "selectCategoryDesc": "You can pick one or more topics, or choose 'General' to include them all.",
+  "selectCategoryHint": "You can pick one or more topics, or choose 'General' to include them all.",
+  "selectSingleCategoryHint": "Select one topic to start your round.",
   "animals": "Animals",
   "science": "Science",
   "geography": "Geography",
