--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -103,16 +103,6 @@
     "خداع اجتماعي",
     "مناسب للعائلة"
   ],
-  "outsideStoryInstructionsTitle": "كيفية لعب 'برا السالفة'",
-  "outsideStoryInstructionsDesc": "لا يعرف أحد اللاعبين الكلمة السرية. باقي اللاعبين يسألون أسئلة ذكية للكشف عن من هو برا السالفة دون قول الكلمة مباشرة.",
-  "outsideStoryInstructionsSteps": [
-    "في بداية الجولة يتم اختيار كلمة سر من فئة معينة (مثلاً: حيوانات).",
-    "كل اللاعبين باستثناء لاعب واحد يعرفون الكلمة. اللاعب الذي لا يعرفها هو 'برا السالفة'.",
-    "يقوم اللاعبون الداخليون بطرح أسئلة ذكية ومضللة قليلًا للكشف عن الخارج دون أن يكشفوا الكلمة.",
-    "يحاول 'الخارج' خداع الآخرين لإيهامهم بأنه يعرف الكلمة.",
-    "بعد جولة من الأسئلة يتم التصويت لمن يعتقدون أنه 'برا السالفة'.",
-    "إذا تم كشف 'الخارج' يحصل اللاعبون الداخليون على نقاط، وإلا يحصل 'الخارج' على نقاط."
-  ],
   "secretIs": "الكلمة السرية:",
   "youAreOutside": "أنت برا السالفة (لا تعرف الكلمة السرية).",
   "startRound": "بدء الجولة",
@@ -148,8 +138,8 @@
 
   "selectCategory": "اختر فئة",
   "selectDifficulty": "اختر الصعوبة",
-  "selectCategoryHint": "يمكنك اختيار فئة أو أكثر، أو اختيار \"منوع\" لتشمل الكل.",
-  "selectSingleCategoryHint": "اختر فئة واحدة للبدء في جولتك.",
+  "selectCategoryHint": "يمكنك اختيار موضوع واحد أو أكثر، أو اختيار 'عام' لتشمل جميع المواضيع.",
+  "selectSingleCategoryHint": "اختر موضوعًا واحدًا فقط للبدء.",
   "animals": "حيوانات",
   "science": "علوم",
   "geography": "جغرافيا",
