--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -177,5 +177,10 @@
     "🌍 دعم كامل للغة العربية والإنجليزية مع RTL",
     "🧠 تركيز تعليمي مع معاني الكلمات",
     "💡 نظام تلميحات ذكي لتوجيه التعلم"
-  ]
+  ],
+  "gameSettings": "إعدادات اللعبة",
+  "changeTeams": "تغيير الفرق",
+  "changeLevel": "تغيير المستوى",
+  "changeCategory": "تغيير الفئة",
+  "confirm": "تأكيد"
 }
