--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -182,5 +182,29 @@
   "changeTeams": "تغيير الفرق",
   "changeLevel": "تغيير المستوى",
   "changeCategory": "تغيير الفئة",
-  "confirm": "تأكيد"
+  "confirm": "تأكيد",
+
+  "voteTitle": "صوتوا على اللي برا السالفة",
+  "submitVote": "صوت",
+  "outsiderGuessTitle": "{player}، ايش هي السالفة؟",
+  "questionTime": "وقت الأسئلة",
+  "questionIntroInstruction": "كل شخص راح يسأل شخص ثاني سؤال متعلق بالسالفة. اضغطوا التالي حتى تعرفون مين راح يسأل مين.",
+  "askerToAskeeInstruction": "{asker} اسأل {askee} سؤال متعلق بالسالفة! اختار سؤالك بعناية حتى اللي برا السالفة ما يعرف عن ايش تتكلمون.",
+  "loadingResults": "جاري تحميل النتائج...",
+  "backToLobby": "العودة إلى اللوبي",
+  "outsiderCaughtButGuessed": "كشفوكم! لكن عرفت السالفة ({secret})، بطل!",
+  "insidersWin": "اللاعبين اللي جوا السالفة فازوا! السالفة كانت ({secret})",
+  "outsiderWins": "{player} ضحك عليكم! هو اللي كان برا السالفة.",
+  "givePhoneToPlayer": "اعطوا الجوال لـ{player}",
+  "pressNextToSeeRole": "اضغط التالي حتى تعرف هل أنت برا السالفة أو داخلها ولا تخلي أحد غيرك يشوف الشاشة!",
+  "youAreTheOutsider": "أنت اللي برا السالفة! حاول تعرف وش السالفة بالضبط من كلام البقية أو اقنعهم يصوتون على الشخص الخطأ!",
+  "youAreAnInsider": "أنت داخل في السالفة واللي هي **{secret}**. هدفك في اللعبة معرفة مين منكم اللي برا السالفة.",
+  "roundEndTitle": "نهاية الجولة!",
+  "roundEndInstruction": "تقدرون تكملون لعب أو تغيرون لاعب أو ترجعون لشاشة اختيار الأسئلة.",
+  "continuePlay": "كمل لعب",
+  "changePlayers": "تغيير اللاعبين",
+  "notEnoughWords": "لا توجد كلمات كافية لهذه الفئة.",
+  "min3Players": "أضف 3 لاعبين على الأقل.",
+  "yourTurnToVote": "{player}، دورك للتصويت.",
+  "passDeviceAndVote": "مرر الجهاز إلى {player} للتصويت."
 }
