--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -182,5 +182,29 @@
   "changeTeams": "Change Teams",
   "changeLevel": "Change Level",
   "changeCategory": "Change Category",
-  "confirm": "Confirm"
+  "confirm": "Confirm",
+
+  "voteTitle": "Vote for the Outsider",
+  "submitVote": "Submit Vote",
+  "outsiderGuessTitle": "{player}, what's the story?",
+  "questionTime": "Question Time",
+  "questionIntroInstruction": "Each person will ask another person a question related to the topic. Press next to see who asks who.",
+  "askerToAskeeInstruction": "{asker}, ask {askee} a question about the topic! Choose your question carefully so the Outsider doesn't figure it out.",
+  "loadingResults": "Loading results...",
+  "backToLobby": "Back to Lobby",
+  "outsiderCaughtButGuessed": "You were caught! But you guessed the story ({secret}), well done!",
+  "insidersWin": "The Insiders win! The story was ({secret}).",
+  "outsiderWins": "{player} fooled you all! They were the Outsider.",
+  "givePhoneToPlayer": "Give the phone to {player}",
+  "pressNextToSeeRole": "Press next to see if you are in or out of the story. Don't let anyone else see the screen!",
+  "youAreTheOutsider": "You are the Outsider! Try to figure out the story from the others' conversation or convince them to vote for the wrong person!",
+  "youAreAnInsider": "You are an Insider! The story is **{secret}**. Your goal is to find out who among you is the Outsider.",
+  "roundEndTitle": "End of Round!",
+  "roundEndInstruction": "You can continue playing, change players, or go back to the category selection screen.",
+  "continuePlay": "Continue Playing",
+  "changePlayers": "Change Players",
+  "notEnoughWords": "Not enough words for this category.",
+  "min3Players": "Add at least 3 players.",
+  "yourTurnToVote": "{player}, it's your turn to vote.",
+  "passDeviceAndVote": "Pass the device to {player} to vote."
 }
