Refactor game logic and fix multiple UI/state bugs

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -144,6 +144,7 @@
   "science": "علوم",
   "geography": "جغرافيا",
   "generalKnowledge": "منوع",
+  "general": "منوع",
   "fruits-and-vegetables": "فواكه وخضار",
   "anime": "أنمي",
   "cars": "سيارات",
