--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -144,6 +144,7 @@
   "science": "Science",
   "geography": "Geography",
   "generalKnowledge": "General",
+  "general": "General",
   "fruits-and-vegetables": "Fruits & Vegetables",
   "anime": "Anime",
   "cars": "Cars",
