refactor(kids-games): Unify choice games with shared layout and fix progression

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -34,6 +34,7 @@
   "select": "اختر",
   "selected": "مختار",
   "of": "من",
+  "playSound": "تشغيل الصوت",
 
   "selectGame": "اختر نوع اللعبة",
   "selectGameDesc": "اختر نوع التحدي الذي تريد أن تلعبه",
