--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -34,6 +34,7 @@
   "select": "Select",
   "selected": "Selected",
   "of": "of",
+  "playSound": "Play Sound",
 
   "selectGame": "Choose Game Type",
   "selectGameDesc": "Select the type of challenge you want to play",
