Centralize clue-game logic and improve naming

--- a/src/locales/ar/instructions.json
+++ b/src/locales/ar/instructions.json
@@ -1,9 +1,9 @@
 {
-  "clue": {
+  "phraseClue": {
     "title": "البحث عن الكلمات بالأدلة",
-    "description": "ابحث عن الكلمة المخفية عن طريق اختيار الحروف التي تتطابق مع القرينة. استخدم مفرداتك لحل اللغز!",
+    "description": "ابحث عن الكلمة المخفية عن طريق اختيار الحروف التي تتطابق مع العبارة. استخدم مفرداتك لحل اللغز!",
     "steps": [
-      "اقرأ القرينة في أعلى الشاشة لتعرف الكلمة المطلوبة.",
+      "اقرأ العبارة في أعلى الشاشة لتعرف الكلمة المطلوبة.",
       "انقر على الحروف من الشبكة لتكوين إجابتك.",
       "استخدم زر 'إزالة' للتراجع عن آخر حرف وضعته.",
       "استخدم زر 'مسح' لحذف كل الحروف والبدء من جديد.",
