--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -42,8 +42,8 @@
   "formationDesc": "اعثر على جميع الكلمات الممكنة من مجموعة من الحروف المعطاة",
   "categoryTitle": "تخمين كلمة الفئة",
   "categoryDesc": "خمن الكلمة الصحيحة بناءً على أدلة من فئات مختلفة",
-  "clueTitle": "البحث عن الكلمات بالأدلة",
-  "clueDesc": "اعثر على الكلمة المخفية عن طريق ترتيب الحروف باستخدام الدليل المقدم",
+  "phraseClueTitle": "البحث عن الكلمات بالأدلة",
+  "phraseClueDesc": "اعثر على الكلمة المخفية عن طريق ترتيب الحروف باستخدام الدليل المقدم",
   "available": "متاح",
   "comingSoon": "قريباً",
   "unknown": "غير معروف",
@@ -58,7 +58,7 @@
     "فئات متعددة",
     "محتوى تعليمي"
   ],
-  "clueFeatures": [
+  "phraseClueFeatures": [
     "حروف مبعثرة",
     "أدلة مفيدة",
     "نظام تلميحات"
