Enhance player feedback and instructions of the game "Outside of Story"

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -212,7 +212,7 @@
   "outsiderWins": "{player} ضحك عليكم! هو اللي كان برا السالفة.",
   "givePhoneToPlayer": "اعطوا الجوال لـ{player}",
   "pressNextToSeeRole": "اضغط التالي حتى تعرف هل أنت برا السالفة أو داخلها ولا تخلي أحد غيرك يشوف الشاشة!",
-  "youAreTheOutsider": "أنت اللي برا السالفة! حاول تعرف وش السالفة بالضبط من كلام البقية أو اقنعهم يصوتون على الشخص الخطأ!",
+  "youAreTheOutsider": "أنت اللي برا السالفة! حاول تعرف وش السالفة بالضبط من كلام البقية أو اقنعهم يصوتون على الشخص الخطأ! تلميح السالفة عن الـ{category}",
   "youAreAnInsider": "أنت داخل في السالفة واللي هي **{secret}**. هدفك في اللعبة معرفة مين منكم اللي برا السالفة.",
   "roundEndTitle": "نهاية الجولة!",
   "roundEndInstruction": "تقدرون تكملون لعب أو تغيرون لاعب أو ترجعون لشاشة اختيار الأسئلة.",
