--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -212,7 +212,7 @@
   "outsiderWins": "{player} fooled you all! They were the Outsider.",
   "givePhoneToPlayer": "Give the phone to {player}",
   "pressNextToSeeRole": "Press next to see if you are in or out of the story. Don't let anyone else see the screen!",
-  "youAreTheOutsider": "You are the Outsider! Try to figure out the story from the others' conversation or convince them to vote for the wrong person!",
+  "youAreTheOutsider": "You are the Outsider! Try to figure out what the story is from the others' conversation or convince them to vote for the wrong person! Hint: The story is about {category}",
   "youAreAnInsider": "You are an Insider! The story is **{secret}**. Your goal is to find out who among you is the Outsider.",
   "roundEndTitle": "End of Round!",
   "roundEndInstruction": "You can continue playing, change players, or go back to the category selection screen.",
