Centralize logic for choice-based games

--- a/src/locales/ar/instructions.json
+++ b/src/locales/ar/instructions.json
@@ -60,7 +60,7 @@
       "أكمل جميع الاتصالات للفوز بالمرحلة!"
     ]
   },
-  "pictureChoice": {
+  "ImgChoice": {
     "title": "كيف تلعب: ابحث عن الصورة",
     "description": "تختبر هذه اللعبة مهاراتك في فهم القراءة والتعرف البصري.",
     "steps": [
