--- a/src/locales/en/instructions.json
+++ b/src/locales/en/instructions.json
@@ -72,7 +72,7 @@
       "If the Outsider is identified, insiders score points. If not, the Outsider scores points."
     ]
   },
-  "pictureChoice": {
+  "ImgChoice": {
     "title": "How to Play: Find the Picture",
     "description": "This game tests your reading comprehension and visual recognition skills.",
     "steps": [
