Centralize all game logic with useGameController

--- a/src/locales/ar/instructions.json
+++ b/src/locales/ar/instructions.json
@@ -27,7 +27,7 @@
       "حاول إيجاد جميع الكلمات في الشبكة!"
     ]
   },
-  "imageClue": {
+  "imgClue": {
     "title": "لعبة الدليل الصوري",
     "description": "خمن الكلمة بناءً على الدليل البصري. اكتب إجابتك باستخدام لوحة المفاتيح وأرسلها للتحقق من صحتها!",
     "steps": [
@@ -60,7 +60,7 @@
       "أكمل جميع الاتصالات للفوز بالمرحلة!"
     ]
   },
-  "ImgChoice": {
+  "imgChoice": {
     "title": "كيف تلعب: ابحث عن الصورة",
     "description": "تختبر هذه اللعبة مهاراتك في فهم القراءة والتعرف البصري.",
     "steps": [
