--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -75,17 +75,17 @@
 
   "kidsGamesTitle": "ألغاز الأطفال",
   "kidsGamesDesc": "ألعاب ممتعة وتعليمية مصممة خصيصاً للأطفال.",
-  "imageClueTitle": "صورة وكلمة",
-  "imageClueDesc": "كوّن الكلمة التي تطابق الصورة من الحروف المعطاة.",
-  "imageClueFeatures": ["تنمية مهارات الإملاء", "ربط بصري", "دعم صوتي"],
+  "imgClueTitle": "صورة وكلمة",
+  "imgClueDesc": "كوّن الكلمة التي تطابق الصورة من الحروف المعطاة.",
+  "imgClueFeatures": ["تنمية مهارات الإملاء", "ربط بصري", "دعم صوتي"],
 
   "wordChoiceTitle": "ابحث عن الكلمة",
   "wordChoiceDesc": "انظر إلى الصورة واختر الكلمة الصحيحة من القائمة.",
   "wordChoiceFeatures": ["تحسين القراءة", "اختيار من متعدد", "تقييم فوري"],
 
-  "ImgChoiceTitle": "ابحث عن الصورة",
-  "ImgChoiceDesc": "اقرأ الكلمة واختر الصورة التي تطابقها.",
-  "ImgChoiceFeatures": ["اختبار الفهم", "تمييز بصري", "ممتعة وتفاعلية"],
+  "imgChoiceTitle": "ابحث عن الصورة",
+  "imgChoiceDesc": "اقرأ الكلمة واختر الصورة التي تطابقها.",
+  "imgChoiceFeatures": ["اختبار الفهم", "تمييز بصري", "ممتعة وتفاعلية"],
 
   "pictureToWordTitle": "صورة وكلمة",
   "pictureToWordDesc": "كوّن الكلمة التي تطابق الصورة من الحروف المعطاة.",
