--- a/src/locales/en/instructions.json
+++ b/src/locales/en/instructions.json
@@ -27,7 +27,7 @@
       "Try to find all the words on the grid!"
     ]
   },
-  "imageClue": {
+  "imgClue": {
     "title": "Image Clue Game",
     "description": "Guess the word based on the image clue. Type your answer using the keyboard and submit to check if you're right!",
     "steps": [
@@ -72,7 +72,7 @@
       "If the Outsider is identified, insiders score points. If not, the Outsider scores points."
     ]
   },
-  "ImgChoice": {
+  "imgChoice": {
     "title": "How to Play: Find the Picture",
     "description": "This game tests your reading comprehension and visual recognition skills.",
     "steps": [
