Finalize and align all games to the central notification system

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -12,10 +12,6 @@
   "easy": "سهل",
   "medium": "متوسط",
   "hard": "صعب",
-  "congrats": "مبروك!",
-  "wrongAnswer": "الإجابة خاطئة! حاول مرة أخرى.",
-  "wrongAttempts": "محاولات خاطئة",
-  "solutionWas": "كان الحل هو",
   "remove": "حذف",
   "clear": "مسح",
   "hint": "تلميح",
@@ -23,9 +19,6 @@
   "showSolution": "أظهر الحل",
   "undo": "تراجع",
   "typeAWord": "اكتب كلمة",
-  "hintUsed": "تم استخدام تلميح!",
-  "alreadyFound": "تم العثور عليها بالفعل!",
-  "found": "تم العثور على!",
   "prev": "السابق",
   "next": "التالي",
   "reset": "إعادة",
@@ -33,7 +26,6 @@
   "features": "الميزات",
   "select": "اختر",
   "selected": "مختار",
-  "of": "من",
   "playSound": "تشغيل الصوت",
 
   "selectGame": "اختر نوع اللعبة",
@@ -213,7 +205,7 @@
   "givePhoneToPlayer": "اعطوا الجوال لـ{player}",
   "pressNextToSeeRole": "اضغط التالي حتى تعرف هل أنت برا السالفة أو داخلها ولا تخلي أحد غيرك يشوف الشاشة!",
   "youAreTheOutsider": "أنت اللي برا السالفة! حاول تعرف وش السالفة بالضبط من كلام البقية أو اقنعهم يصوتون على الشخص الخطأ! تلميح السالفة عن الـ{category}",
-  "youAreAnInsider": "أنت داخل في السالفة واللي هي **{secret}**. هدفك في اللعبة معرفة مين منكم اللي برا السالفة.",
+  "youAreAnInsider": "أنت داخل في السالفة واللي هي \"{secret}\". هدفك في اللعبة معرفة مين منكم اللي برا السالفة.",
   "roundEndTitle": "نهاية الجولة!",
   "roundEndInstruction": "تقدرون تكملون لعب أو تغيرون لاعب أو ترجعون لشاشة اختيار الأسئلة.",
   "continuePlay": "كمل لعب",
