--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,10 +12,6 @@
   "easy": "easy",
   "medium": "medium",
   "hard": "hard",
-  "congrats": "Congratulations!",
-  "wrongAnswer": "Wrong answer! Try again.",
-  "wrongAttempts": "Wrong attempts",
-  "solutionWas": "The solution was",
   "remove": "Remove",
   "clear": "Clear",
   "hint": "Hint",
@@ -23,9 +19,6 @@
   "showSolution": "Show Solution",
   "undo": "Undo",
   "typeAWord": "Type a word",
-  "hintUsed": "Hint used!",
-  "alreadyFound": "Already found!",
-  "found": "Found!",
   "prev": "Previous",
   "next": "Next",
   "reset": "Reset",
@@ -33,7 +26,6 @@
   "features": "Features",
   "select": "Select",
   "selected": "Selected",
-  "of": "of",
   "playSound": "Play Sound",
 
   "selectGame": "Choose Game Type",
@@ -213,7 +205,7 @@
   "givePhoneToPlayer": "Give the phone to {player}",
   "pressNextToSeeRole": "Press next to see if you are in or out of the story. Don't let anyone else see the screen!",
   "youAreTheOutsider": "You are the Outsider! Try to figure out what the story is from the others' conversation or convince them to vote for the wrong person! Hint: The story is about {category}",
-  "youAreAnInsider": "You are an Insider! The story is **{secret}**. Your goal is to find out who among you is the Outsider.",
+  "youAreAnInsider": "You are an Insider! The story is {secret}. Your goal is to find out who among you is the Outsider.",
   "roundEndTitle": "End of Round!",
   "roundEndInstruction": "You can continue playing, change players, or go back to the category selection screen.",
   "continuePlay": "Continue Playing",
