--- a/src/locales/en/notification.json
+++ b/src/locales/en/notification.json
@@ -17,15 +17,8 @@
   "congrats": "Congratulations!",
   "wrongAnswer": "Wrong answer! Try again.",
   "wrongAttempts": "Wrong attempts",
-  "solutionWas": "The solution was: {{solution}}",
+  "solutionWas": "The solution was",
   "found": "Found!",
   "of": "of",
-  "connectionRemoved": "Connection removed for: {{letter}}",
-  "connectionMade": "Connected: {{letter}}",
-  "connectionsReset": "All connections have been reset.",
-  "pathInvalid": "Path must connect two endpoints!",
-  "connectionOverlap": "Existing connection(s) removed by new connection.",
-  "hintRevealed": "Hint: Connected {{letter}}",
-  "connectionReplaced": "Connected: {{newLetter}} (Removed overlap with: {{oldLetters}})",
   "undefined": "Undefined"
 }
