Internationalize Header, Footer, and Logo components

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -1,4 +1,10 @@
 {
+  "home": "الرئيسية",
+  "games": "الألعاب",
+  "kids": "أطفال",
+  "help": "مساعدة",
+  "openMenu": "افتح القائمة",
+  "closeMenu": "أغلق القائمة",
   "back": "رجوع",
   "level": "المستوى",
   "difficulty": "الصعوبة",
