--- a/src/locales/en/landing.json
+++ b/src/locales/en/landing.json
@@ -12,5 +12,7 @@
     "🌍 Full Arabic and English support with RTL",
     "🧠 Educational focus with word meanings",
     "💡 Smart hint system to guide learning"
-  ]
+  ],
+  "tagline": "Educational Puzzles",
+  "beta": "Beta"
 }
