Harmonize HeroSection with application-wide design

--- a/src/locales/ar/landing.json
+++ b/src/locales/ar/landing.json
@@ -1,18 +1,52 @@
 {
-  "betaStatus": "الآن في نسخة تجريبية",
-  "wordPuzzles": "ألغاز الكلمات",
-  "heroDescription": "تحدى عقلك مع مجموعتنا من ألغاز الكلمات التعليمية. أتقن المفردات في كل من العربية والإنجليزية من خلال لعبة جذابة.",
-  "startPlaying": "ابدأ اللعب الآن",
-  "howToPlay": "كيف تلعب",
-  "gameTypes": "أنواع الألعاب",
-  "languages": "اللغات",
-  "learning": "التعلم",
+  "beta": "تجريبي",
+  "betaStatus": "الآن في نسخة تجريبية - جربها مجاناً!",
+  "wordPuzzles": "ألغاز الكلمات التعليمية",
+  "heroDescription": "تحدى عقلك مع مجموعتنا من ألغاز الكلمات التعليمية المصممة لتعزيز المفردات والمهارات المعرفية في كل من اللغة العربية والإنجليزية.",
+  "heroAdditionalDescription": "أتقن المفردات من خلال ألعاب تفاعلية تتكيف مع سرعة تعلمك. مثالي للطلاب، متعلمي اللغات، وعشاق الألغاز من جميع الأعمار.",
+  "startPlaying": "ابدأ اللعب",
+  "kidsGames": "ألعاب الأطفال",
+  "howToPlay": "كيفية اللعب",
+  "tagline": "ألغاز ذكية للعقول الذكية",
+  "educational": "تعليمي",
+  "bilingual": "ثنائي اللغة",
   "herofeatures": [
-    "🎯 أنواع ألعاب متعددة مع تحديات فريدة",
-    "🌍 دعم كامل للغة العربية والإنجليزية مع RTL",
-    "🧠 تركيز تعليمي مع معاني الكلمات",
-    "💡 نظام تلميحات ذكي لتوجيه التعلم"
+    {
+      "icon": "🎯",
+      "title": "6+ أوضاع لعب",
+      "description": "تحديات فريدة بمستويات صعوبة متدرجة لجميع الأعمار."
+    },
+    {
+      "icon": "🌍",
+      "title": "دعم ثنائي اللغة",
+      "description": "دعم كامل للعربية والإنجليزية مع واجهة RTL وتبديل سلس."
+    },
+    {
+      "icon": "🧠",
+      "title": "تعلم والعب",
+      "description": "نظام تلميحات ذكي مع معاني الكلمات ومحتوى تعليمي."
+    },
+    {
+      "icon": "🏆",
+      "title": "جماعي وفردي",
+      "description": "منافسات جماعية أو متابعة التقدم الشخصي لجميع المستويات."
+    }
   ],
-  "tagline": "ألغاز تعليمية",
-  "beta": "تجريبي"
+  "stats": [
+    {
+      "value": "6+",
+      "label": "أنواع الألعاب",
+      "icon": "brain"
+    },
+    {
+      "value": "2",
+      "label": "اللغات",
+      "icon": "languages"
+    },
+    {
+      "value": "∞",
+      "label": "متعة التعلم",
+      "icon": "users"
+    }
+  ]
 }
